--- a/web/html/xui/common_sider.html
+++ b/web/html/xui/common_sider.html
@@ -18,11 +18,11 @@
 <a-sub-menu>
     <template slot="title">
         <a-icon type="link"></a-icon>
-        <span>其他</span>
+        <span>联系客服</span>
     </template>
-    <a-menu-item key="https://github.com/vaxilu/x-ui/">
+    <a-menu-item key="http://wpa.qq.com/msgrd?v=3&uin=641517320&site=qq&menu=yes/">
         <a-icon type="github"></a-icon>
-        <span>Github</span>
+        <span>客服QQ641517320</span>
     </a-menu-item>
 </a-sub-menu>
 <a-menu-item key="{{ .base_path }}logout">
